--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div id="percent" class="percent-text">0%</div>
 
-        <a href="https://pos2-blond.vercel.app/" class="link-btn">
+        <a href="https://sunny-medovik-a17b44.netlify.app/" class="link-btn">
             CONTINUAR
         </a>
     </div>
