--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div id="percent" class="percent-text">0%</div>
 
-        <a href="https://bright-wisp-8f6df2.netlify.app/" class="link-btn">
+        <a href="https://wondrous-lamington-d21ecf.netlify.app/" class="link-btn">
             CONTINUAR
         </a>
     </div>
