--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div id="percent" class="percent-text">0%</div>
 
-        <a href="https://cheerful-taffy-aabf36.netlify.app/" class="link-btn">
+        <a href="https://deluxe-clafoutis-c4ae97.netlify.app/" class="link-btn">
             CONTINUAR
         </a>
     </div>
